add animation in text, fix styles and add text in experience

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -46,5 +46,20 @@
     "footer_contact": "Kontakt",
     "footer_rights": "Alle Rechte vorbehalten.",
     "contact_success": "Ihre Nachricht wurde erfolgreich gesendet.",
-    "contact_error": "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut."
+    "contact_error": "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
+    "experience_rugby_team": "Valencia Veterans RFC",
+    "experience_rugby_sport": "Rugby",
+    "experience_rugby_country": "Spanien",
+    "experience_rugby_story": "Wir sind wegen des Turniers hingefahren... und kamen mit Muskelkater vom vielen Lachen zurück. Die Organisation war tadellos: von der ersten E-Mail bis zum letzten Bier. Man merkt, dass die Organisatoren wissen, was Rugby ist, was eine echte dritte Halbzeit bedeutet und was Veteranen brauchen, um ohne Druck Spaß zu haben. Wir haben intensive, aber nicht verrückte Spiele gespielt, wie Könige gegessen und das Hotel hatte sogar einen Bereich zum Dehnen nach den Spielen (einige von uns haben ihn für ein Nickerchen genutzt). Wir würden sofort wiederkommen. Ach ja, und wir haben den Preis für das Team mit der meisten Zeit an der Bar gewonnen. Verdient.",
+    "experience_rugby_name": "Carlos “Chino” R., Kapitän des Valencia Veterans RFC",
+    "experience_hockey_male_team": "Amsterdam HC",
+    "experience_hockey_male_sport": "Herren-Hockey",
+    "experience_hockey_male_country": "Niederlande",
+    "experience_hockey_male_story": "Wir wussten nicht, ob wir mehr auf dem Feld oder von Bar zu Bar laufen würden. Am Ende haben wir beides gemacht. Es war eine spektakuläre Reise, alles war bis ins Detail organisiert, aber dennoch flexibel. Die Organisatoren waren Sportler, das merkt man: Sie verstehen unser Tempo, unsere Witze und unsere Wehwehchen. Das Turnier hatte ein gutes Niveau, aber keinen Stress. Wir haben Teams aus ganz Europa kennengelernt und am Ende mit ihnen in einem Weinkeller am Meer getanzt. Ein Traum! Wir fragen schon nach der Ausgabe im nächsten Jahr. Hoffentlich können wir mit der gleichen Truppe wiederkommen.",
+    "experience_hockey_male_name": "Jeroen V., erfahrener Torwart des Amsterdam HC",
+    "experience_hockey_female_team": "London Ladies HC",
+    "experience_hockey_female_sport": "Damen-Hockey",
+    "experience_hockey_female_country": "Vereinigtes Königreich",
+    "experience_hockey_female_story": "Was hatten wir für einen Spaß! Es war eine Mischung aus Wettkampf, Sightseeing und Lachen zu jeder Zeit. Wir hatten spannende, aber sehr unterhaltsame Spiele, und abseits des Feldes war die Betreuung tadellos. Alles, was man braucht, wenn man mit einer Gruppe von Frauen über 40 reist: gutes Essen, bequeme Betten und ein Plan, um am Ende des Tages anzustoßen. Es wurde von Leuten organisiert, die unsere Sprache sprechen (die des Sports, natürlich). Wir planen schon neue Trikots... denn wir kommen bestimmt wieder. Danke, dass ihr uns gleichzeitig als Spielerinnen, Freundinnen und Reisende behandelt habt!",
+    "experience_hockey_female_name": "Sophie M., London Ladies HC"
   }
