--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -52,5 +52,20 @@
     "footer_contact": "Contact",
     "footer_rights": "All rights reserved.",
     "contact_success": "Your message has been sent successfully.",
-    "contact_error": "An error occurred. Please try again."
+    "contact_error": "An error occurred. Please try again.",
+    "experience_rugby_team": "Valencia Veterans RFC",
+    "experience_rugby_sport": "Rugby",
+    "experience_rugby_country": "Spain",
+    "experience_rugby_story": "We went for the tournament... and came back with stitches from laughing so much. The organization was impeccable: from the first email to the last beer. It's clear that the people behind it understand rugby, what a third time is really like, and what we veterans need to enjoy without pressure. We played intense but not crazy games, ate like kings, and the hotel even had space to stretch after the matches (although some of us used it for naps). We'd go back with our eyes closed. Oh, and we won the prize for the team with the most time on the bar. Well deserved.",
+    "experience_rugby_name": "Carlos “Chino” R., captain of Valencia Veterans RFC",
+    "experience_hockey_male_team": "Amsterdam HC",
+    "experience_hockey_male_sport": "Hockey Masculino",
+    "experience_hockey_male_country": "Netherlands",
+    "experience_hockey_male_story": "We weren't sure if we'd run more on the field or in bars. In the end, we did both. It was a spectacular trip, everything measured to the detail but with flexibility. The organizers were people from the sport, you can tell: they understand our rhythms, our jokes, and our injuries. The tournament had level, but without pressure. We met teams from half of Europe, and ended up dancing with them in a winery by the sea. A luxury! We're already asking for the edition next year. Hopefully we can repeat with the same team.",
+    "experience_hockey_male_name": "Jeroen V., veteran goalkeeper of Amsterdam HC",
+    "experience_hockey_female_team": "London Ladies HC",
+    "experience_hockey_female_sport": "Hockey Femenino",
+    "experience_hockey_female_country": "Reino Unido",
+    "experience_hockey_female_story": "We had a great time! It was a mix of competition, tourism, and laughter at any time. We had intense but very funny games, and outside the field the attention was impeccable. Everything you need when traveling with a group of women +40: good food, comfortable beds, and some plan to toast at the end of the day. Organized by people who speak our same language (the sport language, of course). We're already organizing new jerseys... because we're sure we'll go back. Thank you for treating us as players, friends, and travelers at the same time!",
+    "experience_hockey_female_name": "Sophie M., London Ladies HC"
   }
