--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -52,5 +52,20 @@
     "footer_contact": "Contact",
     "footer_rights": "Tous droits réservés.",
     "contact_success": "Votre message a été envoyé avec succès.",
-    "contact_error": "Une erreur est survenue. Veuillez réessayer."
+    "contact_error": "Une erreur est survenue. Veuillez réessayer.",
+    "experience_rugby_team": "Valencia Veterans RFC",
+    "experience_rugby_sport": "Rugby",
+    "experience_rugby_country": "Espagne",
+    "experience_rugby_story": "Nous sommes partis pour le tournoi... et nous sommes revenus avec des courbatures à force de rire. L'organisation était impeccable : du premier mail à la dernière bière. On sent que ceux qui organisent comprennent ce qu'est le rugby, ce qu'est une vraie troisième mi-temps et ce dont les vétérans ont besoin pour profiter sans pression. Nous avons joué des matchs intenses mais sans excès, mangé comme des rois, et l'hôtel avait même un espace pour s'étirer après les matchs (certains l'ont utilisé pour faire la sieste). Nous reviendrions les yeux fermés. Ah, et nous avons gagné le prix de l'équipe qui a passé le plus de temps au bar. Bien mérité.",
+    "experience_rugby_name": "Carlos \"Chino\" R., capitaine du Valencia Veterans RFC",
+    "experience_hockey_male_team": "Amsterdam HC",
+    "experience_hockey_male_sport": "Hockey Masculin",
+    "experience_hockey_male_country": "Pays-Bas",
+    "experience_hockey_male_story": "Nous ne savions pas si nous allions courir plus sur le terrain ou de bar en bar. Finalement, nous avons fait les deux. C'était un voyage spectaculaire, tout était organisé dans les moindres détails mais avec de la flexibilité. Les organisateurs étaient des gens du sport, ça se sent : ils comprennent notre rythme, nos blagues et nos blessures. Le tournoi avait un bon niveau, mais sans stress. Nous avons rencontré des équipes de toute l'Europe et avons fini par danser avec elles dans une cave au bord de la mer. Un luxe ! Nous demandons déjà des infos pour l'édition de l'année prochaine. En espérant revenir avec la même équipe.",
+    "experience_hockey_male_name": "Jeroen V., gardien vétéran de l'Amsterdam HC",
+    "experience_hockey_female_team": "London Ladies HC",
+    "experience_hockey_female_sport": "Hockey Féminin",
+    "experience_hockey_female_country": "Royaume-Uni",
+    "experience_hockey_female_story": "Qu'est-ce qu'on s'est amusées ! C'était un mélange de compétition, de tourisme et de rires à toute heure. Nous avons eu des matchs disputés mais très amusants, et en dehors du terrain, l'attention était impeccable. Tout ce qu'il faut quand on voyage avec un groupe de femmes de plus de 40 ans : bonne nourriture, lits confortables et un plan pour trinquer à la fin de la journée. L'organisation était assurée par des gens qui parlent notre langue (celle du sport, bien sûr). Nous sommes déjà en train de préparer de nouveaux maillots... car nous reviendrons sûrement. Merci de nous avoir traitées comme des joueuses, des amies et des voyageuses à la fois !",
+    "experience_hockey_female_name": "Sophie M., London Ladies HC"
     }
