--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -49,5 +49,20 @@
     "footer_contact": "Contatto",
     "footer_rights": "Tutti i diritti riservati.",
     "contact_success": "Il tuo messaggio è stato inviato con successo.",
-    "contact_error": "Si è verificato un errore. Per favore, riprova."
+    "contact_error": "Si è verificato un errore. Per favore, riprova.",
+    "experience_rugby_team": "Valencia Veterans RFC",
+    "experience_rugby_sport": "Rugby",
+    "experience_rugby_country": "España",
+    "experience_rugby_story": "Siamo andati per il torneo... e siamo tornati con i muscoli indolenziti dal tanto ridere. L'organizzazione è stata impeccabile: dalla prima email all'ultima birra. Si vede che chi c'è dietro capisce cos'è il rugby, cos'è un vero terzo tempo e di cosa hanno bisogno i veterani per divertirsi senza pressioni. Abbiamo giocato partite intense ma senza esagerare, mangiato come re e l'hotel aveva persino uno spazio per allungarsi dopo le partite (anche se alcuni di noi lo hanno usato per i pisolini). Torneremmo a occhi chiusi. Ah, e abbiamo vinto il premio per la squadra che ha passato più tempo al bar. Meritatissimo.",
+    "experience_rugby_name": "Carlos “Chino” R., capitano del Valencia Veterans RFC",
+    "experience_hockey_male_team": "Amsterdam HC",
+    "experience_hockey_male_sport": "Hockey Maschile",
+    "experience_hockey_male_country": "Paesi Bassi",
+    "experience_hockey_male_story": "Non sapevamo se avremmo corso di più in campo o da un bar all'altro. Alla fine abbiamo fatto entrambe le cose. È stato un viaggio spettacolare, tutto organizzato nei minimi dettagli ma con flessibilità. Gli organizzatori erano gente di sport, si nota: capiscono i nostri ritmi, le nostre battute e i nostri acciacchi. Il torneo aveva un buon livello, ma senza stress. Abbiamo conosciuto squadre da tutta Europa e abbiamo finito per ballare con loro in una cantina sul mare. Un sogno! Stiamo già chiedendo informazioni per l'edizione dell'anno prossimo. Speriamo di poter tornare con la stessa squadra.",
+    "experience_hockey_male_name": "Jeroen V., portiere veterano dell'Amsterdam HC",
+    "experience_hockey_female_team": "London Ladies HC",
+    "experience_hockey_female_sport": "Hockey Femminile",
+    "experience_hockey_female_country": "Regno Unito",
+    "experience_hockey_female_story": "Ci siamo divertite tantissimo! È stata una combinazione di competizione, turismo e risate a tutte le ore. Abbiamo giocato partite combattute ma molto divertenti, e fuori dal campo l'attenzione è stata impeccabile. Tutto quello che serve quando si viaggia con un gruppo di donne over 40: buon cibo, letti comodi e qualche piano per brindare a fine giornata. L'organizzazione era fatta da persone che parlano la nostra stessa lingua (quella dello sport, ovviamente). Stiamo già organizzando nuove magliette... perché sicuramente torneremo. Grazie per averci trattato come giocatrici, amiche e viaggiatrici allo stesso tempo!",
+    "experience_hockey_female_name": "Sophie M., London Ladies HC"
     }
