--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -50,5 +50,20 @@
     "footer_contact": "Contact",
     "footer_rights": "Alle rechten voorbehouden.",
     "contact_success": "Je bericht is succesvol verzonden.",
-    "contact_error": "Er is een fout opgetreden. Probeer het opnieuw."
+    "contact_error": "Er is een fout opgetreden. Probeer het opnieuw.",
+    "experience_rugby_team": "Valencia Veterans RFC",
+    "experience_rugby_sport": "Rugby",
+    "experience_rugby_country": "España",
+    "experience_rugby_story": "We gingen voor het toernooi... en kwamen terug met steken van lachen. De organisatie was ongelooflijk: van het eerste e-mailtje tot de laatste biertje. Het is duidelijk dat de mensen achter het project rugby begrijpen, wat een derde tijd echt is en wat we veteranen nodig hebben om zonder druk te kunnen genieten. We speelden intense maar niet gekke wedstrijden, aten als koningen, en het hotel had zelfs ruimte voor uitrekken na de wedstrijden (hoewel sommige ons gebruikten voor nachtrust). We zouden teruggaan met onze ogen dicht. Oh, en we wonnen de prijs voor het team met het meeste tijd op de bar. Waardig.",  
+    "experience_rugby_name": "Carlos “Chino” R., capitán del Valencia Veterans RFC",
+    "experience_hockey_male_team": "Amsterdam HC",
+    "experience_hockey_male_sport": "Hockey",
+    "experience_hockey_male_country": "Nederland",
+    "experience_hockey_male_story": "We wisten niet of we meer op het veld zouden rennen of in de bar zouden gaan. Uiteindelijk deden we beide. Het was een geweldige reis, alles gemeten op de details maar met flexibiliteit. De organisatoren waren mensen van het sport, je merkt het: entienden nuestros ritmos, nuestros chistes y nuestras lesiones. El torneo tuvo nivel, pero sin agobios. Conocimos equipos de media Europa, y terminamos bailando con ellos en una bodega al lado del mar. ¡Un lujo! Ya estamos preguntando por la edición del año que viene. Ojalá podamos repetir con la misma tropa.",
+    "experience_hockey_male_name": "Jeroen V., portero veterano del Amsterdam HC",
+    "experience_hockey_female_team": "London Ladies HC",  
+    "experience_hockey_female_sport": "Hockey",
+    "experience_hockey_female_country": "Verenigd Koninkrijk",
+    "experience_hockey_female_story": "We hadden een geweldige tijd! Het was een mengsel van wedstrijd, toerisme en lachjes op elk moment. We hadden intense maar zeer grappige wedstrijden, en buiten het veld de attentie was ongelooflijk. Alles wat je nodig hebt wanneer je reist met een groep vrouwen +40: goede eten, comfortabele bedden en een plan om te borrelen aan het einde van de dag. Georganiseerd door mensen die onzezelfde taal spreken (de sporttaal, natuurlijk). We organiseren al nieuwe shirts... omdat we zeker weten dat we terug zullen gaan. Bedankt voor het behandelen van ons als spelers, vrienden en reizigers op hetzelfde moment!",
+    "experience_hockey_female_name": "Sophie M., London Ladies HC"
     }
