--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -52,5 +52,20 @@
     "footer_contact": "Contato",
     "footer_rights": "Todos os direitos reservados.",
     "contact_success": "Seu mensagem foi enviado com sucesso.",
-    "contact_error": "Ocorreu um erro. Por favor, tente novamente."
+    "contact_error": "Ocorreu um erro. Por favor, tente novamente.",
+    "experience_rugby_team": "Valencia Veterans RFC",
+    "experience_rugby_sport": "Rugby",
+    "experience_rugby_country": "Espanha",
+    "experience_rugby_story": "Fomos para o torneio... e voltamos com agujetas de tanto reírnos. A organização foi impecável: desde o primeiro e-mail até a última cerveja. Se nota que quem está por trás entende o que é o rugby, o que é um terceiro tempo de verdade e o que precisamos para os veteranos para desfrutar sem pressão. Jogamos partidas intensas mas sem locuras, comimos como reis, e o hotel tinha até lugar para esticar depois dos partidos (embora alguns o usássemos para siestas). Voltaríamos com os olhos fechados. Ah, e ganhamos o prêmio ao time com mais tempo na barra. Merecido.",
+    "experience_rugby_name": "Carlos “Chino” R., capitán do Valencia Veterans RFC",
+    "experience_hockey_male_team": "Amsterdam HC",
+    "experience_hockey_male_sport": "Hockey Masculino",
+    "experience_hockey_male_country": "Países Baixos",
+    "experience_hockey_male_story": "Não sabíamos se íamos correr mais na quadra ou de bar em bar. No final fizemos ambas. Foi um viaje espetacular, todo medido ao detalhe mas com flexibilidade. Os organizadores eram gente do desporto, notás: entendem os nossos ritmos, nossos chistes e nossas lesões. O torneio teve nível, mas sem agobios. Conhecemos equipas de média Europa, e terminamos bailando com eles em uma bodega ao lado do mar. Um luxo! Já estamos a perguntar pela edição do ano que vem. Obrigado por tratarmos como jogadoras, amigas e viajeras ao mesmo tempo!",    
+    "experience_hockey_male_name": "Jeroen V., portero veterano do Amsterdam HC",
+    "experience_hockey_female_team": "London Ladies HC",
+    "experience_hockey_female_sport": "Hockey Feminino",
+    "experience_hockey_female_country": "Reino Unido",
+    "experience_hockey_female_story": "Fomos para o torneio... e voltamos com agujetas de tanto reírnos. A organização foi impecável: desde o primeiro e-mail até a última cerveja. Se nota que quem está por trás entende o que é o rugby, o que é um terceiro tempo de verdade e o que precisamos para os veteranos para desfrutar sem pressão. Jogamos partidas intensas mas sem locuras, comimos como reis, e o hotel tinha até lugar para esticar depois dos partidos (embora alguns o usássemos para siestas). Voltaríamos com os olhos fechados. Ah, e ganhamos o prêmio ao time com mais tempo na barra. Merecido.",
+    "experience_hockey_female_name": "Sophie M., London Ladies HC"
 }
