--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -41,6 +41,8 @@
     "howwework_arrival_desc": "Willkommen und starten Sie Ihre Abenteuer",
     "howwework_celebration": "Feierabend",
     "howwework_celebration_desc": "Genießen Sie das Spiel und die Party",
+    "howwework_play": "Spielen",
+    "howwework_play_desc": "Spielen Sie mit den besten Teams",
     "footer_description": "Spezialisten für Sporttourismus für Veteranenrugby- und Hockeyteams in der Valencianischen Gemeinschaft und der Costa del Sol.",
     "footer_quick_links": "Schnellzugriffe",
     "footer_contact": "Kontakt",
