--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -46,6 +46,8 @@
     "howwework_arrival": "Arrivée",
     "howwework_arrival_desc": "Bienvenue et commencez votre aventure",
     "howwework_celebration": "Fête",
+    "howwework_play": "Jouer",
+    "howwework_play_desc": "Jouez avec les meilleures équipes",
     "howwework_celebration_desc": "Profitez du match et de la fête",
     "footer_description": "Spécialistes du tourisme sportif pour les équipes de rugby et de hockey vétérans dans la Communauté Valencienne et la Costa del Sol.",
     "footer_quick_links": "Liens rapides",
