--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -44,6 +44,8 @@
     "howwework_arrival_desc": "Benvenuto e inizia la tua avventura",
     "howwework_celebration": "Festa",
     "howwework_celebration_desc": "Goditi il match e la festa",
+    "howwework_play": "Giocare",
+    "howwework_play_desc": "Gioca con i migliori team",
     "footer_description": "Specialisti in turismo sportivo per squadre di rugby e hockey veterani nella Comunità Valenciana e la Costa del Sol.",
     "footer_quick_links": "Collegamenti rapidi",
     "footer_contact": "Contatto",
