--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -46,7 +46,9 @@
     "howwework_arrival": "Chegada",
     "howwework_arrival_desc": "Bem-vindo e comece sua aventura",
     "howwework_celebration": "Festa",
-    "howwework_celebration_desc": "Desfrute do jogo e da festa",
+    "howwework_celebration_desc": "Desfrute do jogo e da festa",  
+    "howwework_play": "Jogar",
+    "howwework_play_desc": "Jogue com os melhores times",
     "footer_description": "Especialistas em turismo esportivo para equipes de rugby e hockey veteranos na Comunidade Valenciana e Costa del Sol.",
     "footer_quick_links": "Links rápidos",
     "footer_contact": "Contato",
