--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -47,6 +47,8 @@
     "howwework_arrival_desc": "Welcome and start your adventure",
     "howwework_celebration": "Celebration",
     "howwework_celebration_desc": "Enjoy the game and the party",
+    "howwework_play": "Play",
+    "howwework_play_desc": "Play with the best teams",
     "footer_description": "Specialists in sports tourism for veteran rugby and hockey teams in the Valencian Community and Costa del Sol.",
     "footer_quick_links": "Quick Links",
     "footer_contact": "Contact",
