--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -46,7 +46,9 @@
   "howwework_arrival": "Llegada",
   "howwework_arrival_desc": "Bienvenido y comienza tu aventura",
   "howwework_celebration": "Celebración",
-  "howwework_celebration_desc": "Disfruta del partido y la fiesta",
+  "howwework_celebration_desc": "Disfruta del partido y la fiesta", 
+  "howwework_play": "Jugar",
+  "howwework_play_desc": "Juega con los mejores equipos",
   "footer_description": "Especialistas en turismo deportivo para equipos de rugby y hockey veteranos en la Comunidad Valenciana y Costa del Sol.",
   "footer_quick_links": "Enlaces Rápidos",
   "footer_contact": "Contacto",
