--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -45,6 +45,8 @@
     "howwework_arrival_desc": "Welkom en begin je avontuur",
     "howwework_celebration": "Feest",
     "howwework_celebration_desc": "Geniet van het spel en de feestelijkheid",
+    "howwework_play": "Spelen",
+    "howwework_play_desc": "Speel met de beste teams",
     "footer_description": "Specialisten in sporttourisme voor veteranenrugby- en hockeyteams in de Valencianische Gemeenschap en de Costa del Sol.",
     "footer_quick_links": "Snelle links",
     "footer_contact": "Contact",
